Fix main padding to avoid fixed header overlap

--- a/css/style.css
+++ b/css/style.css
@@ -109,8 +109,8 @@ a:hover {
   width: 100%;
 }
 
-.main {
-  padding-top: 18s0px;
+main {
+  padding-top: 120px;
 }
 
 
